# cookiecutter_test

./: Dockerfile  README.md  build-metadata.json  log-config.yaml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: pytest-int.yml  pytest-unit.yml  pythonbatch-release.yml
src/python/: main.py
src/test/int/: test_end_to_end.py  test_environments.py  test_error_scenarios.py  test_logging_integration.py
src/test/unit/: test_cli.py  test_logging.py  test_main.py
